--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -45,6 +45,9 @@ h2 {
 h3 {
   @apply text-lg font-bold;
 }
+h4 {
+  @apply text-base font-bold;
+}
 ul {
   list-style-type: circle;
   list-style-position: inside;
